syntax = "proto2";

package intake;

// VisitStatus represents an overall status for a visit
// by reporting the status of individual sections within the visit.
message VisitStatus {
	message StatusEntry {
		enum State {
			COMPLETE = 0;
			INCOMPLETE = 1;
			ERROR = 2;
		}

		required string name = 1;
		required State state = 2;

		// tap_link represents the action to take when the user taps on a particular
		// section
		optional string tap_link = 3;
	}

	repeated StatusEntry entries = 1;
}
